2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* .cvsignore: Added.

2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* {ChangeLog,watchquagga.c,Makefile.am}: Created.