@@ -1,3 +1,7 @@
+2004-12-22 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* watchquagga.c: Get PATH_WATCHQUAGGA_PID from config.h.
+
 2004-12-21 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* .cvsignore: Added.
